--- a/awesomeStyle.css
+++ b/awesomeStyle.css
@@ -18,7 +18,7 @@ body {
     font-size: 3.75rem;
     margin-top: 20px;
     margin-bottom: 24px;
-    font-family: "BBH Bogle", system-ui;
+    font-family: "BBH Bogle", sans-serif;
     font-weight: 395;
 }
 
@@ -74,7 +74,7 @@ body {
 .WorkoutLabel {
     font-size: 2rem;
     margin: 10px;
-    font-family: "BBH Bogle", system-ui;
+    font-family: "BBH Bogle", sans-serif;
     font-weight: 385;
 }
 
@@ -105,7 +105,7 @@ body {
     margin-top: 25px;
     margin-bottom: 25px;
     font-size: 2.75rem;
-    font-family: "BBH Bogle", system-ui;
+    font-family: "BBH Bogle", sans-serif;
     font-weight: 400;;
     transition: transform 0.1s ease, background-color 0.1s ease;
     cursor: pointer;
@@ -132,7 +132,7 @@ body {
     font-size: clamp(1.5rem, 17vw, 4rem);
     margin-top: -15px;
     margin-bottom: 15px;
-    font-family: "BBH Bogle", system-ui;
+    font-family: "BBH Bogle", sans-serif;
     font-weight: 400;
 }
 
@@ -147,4 +147,5 @@ body {
     margin-bottom: 0;
     font-family: "Faustina", serif;
     font-weight: normal;
+
 }
